makko/default/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  labels:
    app: vikunja
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
      # Vikunja Container
      - image: vikunja/vikunja
        name: vikunja
        volumeMounts:
        - name: files
          mountPath: /app/vikunja/files
        ports:
        - containerPort: 3456
        resources:
          limits:
            cpu: "1"
            memory: 384Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 128Mi
      - name: mariadb
        image: mariadb:13.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 64Mi
            ephemeral-storage: 16Mi
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: vikunja-pvc
      - name: db-data
        persistentVolumeClaim:
          claimName: vikunja-db-pvc
