makko/default/vikunja/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vikunja
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "todo.senk0.com"
  rules:
    - backendRefs:
        - name: vikunja
          port: 3456
